# HDC2010_Pi

./: CMakeLists.txt  LICENSE  README.md
src/: hdc2010.c
